--- a/learn-certs-pr/courses/da-100t00.yml
+++ b/learn-certs-pr/courses/da-100t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Analyzing Data with Power BI
+title: Analyzing Data with Microsoft Power BI
 metadata:
-  title: 'Course DA-100T00-A: Analyzing Data with Power BI'
-  description: 'Course DA-100T00-A: Analyzing Data with Power BI'
+  title: 'Course DA-100T00-A: Analyzing Data with Microsoft Power BI'
+  description: 'Course DA-100T00-A: Analyzing Data with Microsoft Power BI'
 uid: course.da-100t00
 courseNumber: 'DA-100T00-A'
 hoursToComplete: 120
@@ -26,7 +26,7 @@ products:
 exams:
 - uid: exam.da-100
 summary: |-
-  В этом курсе будут обсуждаться различные методы и рекомендации, которые соответствуют корпоративным требованиям и техническим требованиям для моделирования, визуализации и анализа данных с помощью Power BI. Этот курс также покажет, как получать доступ и обрабатывать данные из целого ряда источников данных, включая как реляционные, так и нереляционные данные. В этом курсе также будет рассмотрен вопрос о том, как реализовать надлежащие стандарты и политики безопасности во всем спектре Power BI, включая наборы данных и группы. На курсе также будет обсуждаться, как управлять и развертывать отчеты и информационные панели для совместного использования и распространения содержимого. Наконец, этот курс покажет, как создавать разбитые на страницы отчеты в службе Power BI и публиковать их в рабочем пространстве для включения в Power BI.
+  Этот курс запускается 24 июля 2020 года. В этом курсе будут обсуждаться различные методы и рекомендации, которые соответствуют корпоративным требованиям и техническим требованиям для моделирования, визуализации и анализа данных с помощью Power BI. Этот курс также покажет, как получать доступ и обрабатывать данные из целого ряда источников данных, включая как реляционные, так и нереляционные данные. В этом курсе также будет рассмотрен вопрос о том, как реализовать надлежащие стандарты и политики безопасности во всем спектре Power BI, включая наборы данных и группы. На курсе также будет обсуждаться, как управлять и развертывать отчеты и информационные панели для совместного использования и распространения содержимого. Наконец, этот курс покажет, как создавать разбитые на страницы отчеты в службе Power BI и публиковать их в рабочем пространстве для включения в Power BI.
 
   #### Профиль аудитории
   Аудитория этого курса - профессионалы в области данных и специалисты по бизнес-аналитике, которые хотят научиться точно выполнять анализ данных с помощью Power BI. Этот курс также предназначен для тех, кто разрабатывает отчеты, которые визуализируют данные из технологий платформы данных, существующих как в облаке, так и локально.
@@ -40,7 +40,7 @@ outlineSection: |-
   - Определение задач аналитика данных
 
 
-  #### Лабораторная работа &#58; Начало работы
+  #### Лабораторная работа&#58; Начало работы
   - Начало работы
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -58,7 +58,7 @@ outlineSection: |-
   - Профилирование данных
 
 
-  #### Лабораторная работа &#58; Подготовка данных в Power BI Desktop
+  #### Лабораторная работа&#58; Подготовка данных в Power BI Desktop
   - Подготовка данных
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -79,7 +79,7 @@ outlineSection: |-
   - Настройка загрузки данных и устранения ошибок
 
 
-  #### Лабораторная работа &#58; Загрузка данных в Power BI Desktop
+  #### Лабораторная работа&#58; Загрузка данных в Power BI Desktop
   - Загрузка данных
 
   После завершения этого модуля студенты смогут следующее&#58;
@@ -97,7 +97,7 @@ outlineSection: |-
   - Производительность моделей
 
 
-  #### Лабораторная работа &#58; Моделирование данных в Power BI Desktop
+  #### Лабораторная работа&#58; Моделирование данных в Power BI Desktop
   - Создание отношений моделей
   - Настройка таблицы
   - Обзор интерфейса модели
@@ -139,11 +139,11 @@ outlineSection: |-
   - Интеллектуальные функции
 
 
-  #### Лабораторная работа &#58; Использование DAX в Power BI - часть 1
+  #### Лабораторная работа&#58; Использование DAX в Power BI - часть 1
   - Создание расчетные таблицы
   - Создание мер
 
-  #### Лабораторная работа &#58; Использование DAX в Power BI - часть 2
+  #### Лабораторная работа&#58; Использование DAX в Power BI - часть 2
   - Работа с фильтром содержимогоа
   - Работа с аналитикой времени (Time-Intelligence)
   - Публикация файла Power BI Desktop
@@ -178,7 +178,7 @@ outlineSection: |-
   - Улучшение отчета
 
 
-  #### Лабораторная работа &#58; Разработка отчета в Power BI Desktop - часть 1
+  #### Лабораторная работа&#58; Разработка отчета в Power BI Desktop - часть 1
   - Создание отчет
   - Регистрация в службе Power BI.
 
@@ -197,7 +197,7 @@ outlineSection: |-
   - Улучшение отчетов
 
 
-  #### Лабораторная работа &#58; Разработка отчета в Power BI Desktop - часть 2
+  #### Лабораторная работа&#58; Разработка отчета в Power BI Desktop - часть 2
   - Настройка синхронизации срезов
   - Настройка сквозного бурения
   - Добавление условного форматирования
@@ -241,7 +241,7 @@ outlineSection: |-
   - Расширенный анализ
 
 
-  #### Лабораторная работа &#58; анализ данных в Power BI Desktop
+  #### Лабораторная работа&#58; анализ данных в Power BI Desktop
   - Создание отчет
   - Создание точечной диаграммы
   - Создание прогноза
@@ -266,7 +266,7 @@ outlineSection: |-
   - Обмен и распространение содержимого
 
 
-  #### Лабораторная работа &#58; Публикация и распространение содержимого Power BI
+  #### Лабораторная работа&#58; Публикация и распространение содержимого Power BI
   - Настройка безопасности набора данных
   - Как поделиться панелью
   - Публикация приложения
@@ -288,7 +288,7 @@ outlineSection: |-
   - Улучшение и публикация отчетов
 
 
-  #### Лабораторная работа &#58; Создание отчета, разбитого на страницы
+  #### Лабораторная работа&#58; Создание отчета, разбитого на страницы
   - Начало работы
   - Разработка отчета
 
