--- a/learn-certs-pr/exams/dp-900.yml
+++ b/learn-certs-pr/exams/dp-900.yml
@@ -9,6 +9,7 @@ summary: "<div style='color&#58; red;'><strong>Ввиду ситуации с р
 subTitle: 'Докажите, что вы можете описать следующее: основные понятия данных; как работать с реляционными данными в Azure; как работать с нереляционными данными в Azure; аналитическая нагрузка на Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wsKZ
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-900&examname=Exam%20DP-900:%20Microsoft%20Azure%20Data%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-900
 locales:
 - en
 levels:
@@ -23,6 +24,8 @@ roles:
 - database-administrator
 products:
 - azure
+paths:
+- uid: learn.wwl.azure-data-fundamentals-explore-core-data-concepts
 relatedCertifications:
 - related:
     uid: certification.azure-data-fundamentals
@@ -33,7 +36,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
