--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -8,7 +8,7 @@ displayName: MB-200
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 1 мая 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 1 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен являются функциональными консультантами, которые имеют доступ к функциям и функциям лицензированного продукта предприятия. Как функциональный консультант, кандидат знает о связанных версиях функций, но в основном не работает с этими продуктами.
@@ -27,7 +27,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 1 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена было обновлено 1 июля2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Осуществление обнаружения, планирования и анализа (5-10%)
 - Управление пользовательским интерфейсом (20-25%)
 - Управление объектами и данными (15-20%)
