--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -8,7 +8,7 @@ displayName: MB-210
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 1 мая 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 1 июля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются функциональные консультанты Dynamics 365 с опытом продаж. Кандидаты несут ответственность за внедрение решений, поддерживающих жизненный цикл продаж для эффективного и действенного выполнения задач по достижению доходов, бизнес-стратегий и целей компании.
@@ -25,7 +25,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 1 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена было обновлено 1 июля2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
 - Выполнение настройки (40-45%)
 - Управление основными объектами продаж (20-25%)
 - Управление объектами продаж (35-40%)
