--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -32,6 +32,8 @@ roles:
 - administrator
 products:
 - m365
+courses:
+- uid: course.ms-203t00
 relatedCertifications:
 - related:
     uid: certification.m365-messaging-administrator
