--- a/learn-certs-pr/exams/az-104.yml
+++ b/learn-certs-pr/exams/az-104.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Azure Administrator (beta)
+title: Microsoft Azure Administrator
 metadata:
-  title: 'Exam AZ-104: Microsoft Azure Administrator (beta)'
-  description: 'Exam AZ-104: Microsoft Azure Administrator (beta)'
+  title: 'Exam AZ-104: Microsoft Azure Administrator'
+  description: 'Exam AZ-104: Microsoft Azure Administrator'
 uid: exam.az-104
 displayName: AZ-104
 summary: |-
@@ -15,16 +15,15 @@ summary: |-
   Администратор Azure часто выступает в составе большой группы, занимающейся реализацией облачной инфраструктуры вашей организации.
 
   Кандидат на этот экзамен должен обладать практическим опытом администрирования Azure не менее шести месяцев, а также хорошо разбираться в основных службах Azure, рабочих нагрузках Azure, безопасности и управлении. Кроме того, эта роль должна иметь опыт использования PowerShell, Azure CLI, портала Azure и шаблонов Azure Resource Manager.
-
-  <div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: управление удостоверениями Azure; реализация и управление хранилищем; развертывание вычислительных ресурсов Azure и управление ими; настройка и управление виртуальными сетями; отслеживание и резервное сохранение ресурсов Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pCWy
+practiceTestUrl: https://www.mindhub.com/p/MU-AZ-104?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 providers:
-- providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
-- providerType: gsi
-  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-104&examname=Exam%20AZ-104:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-104
+  - providerType: gsi
+    examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
 - en
 levels:
